RESOLVED FIXED289255
Crash under WebPageProxy::navigationGestureDidEnd()
https://bugs.webkit.org/show_bug.cgi?id=289255
Summary Crash under WebPageProxy::navigationGestureDidEnd()
Chris Dumez
Reported 2025-03-06 09:22:24 PST
Crash under WebPageProxy::navigationGestureDidEnd(): ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread: 0 com.apple.WebKit 0x1bc020bc4 WebKit::WebPageProxy::navigationGestureDidEnd(bool, WebKit::WebBackForwardListItem&) + 108 1 com.apple.WebKit 0x1bc0961f8 WebKit::ViewGestureController::endSwipeGesture(WebKit::WebBackForwardListItem*, bool) + 192 2 com.apple.AppKit 0x198a9a8ac ___trackSwipeWithScrollEvent_block_invoke_2 + 264 3 com.apple.AppKit 0x198eec980 __NSEventSnapSwipeElasticWithBlock_block_invoke + 568 4 com.apple.AppKit 0x198eecb70 ___NSRunLoopTimerCreateWithHandler_block_invoke + 56 ```
Attachments
Chris Dumez
Comment 1 2025-03-06 09:24:42 PST
Chris Dumez
Comment 2 2025-03-06 09:40:36 PST
EWS
Comment 3 2025-03-06 14:01:25 PST
Committed 291731@main (2d7a0627e1cc): <https://commits.webkit.org/291731@main> Reviewed commits have been landed. Closing PR #42007 and removing active labels.
EWS
Comment 4 2025-03-11 14:52:42 PDT
Committed 289651.252@safari-7621-branch (4dedf2b7310c): <https://commits.webkit.org/289651.252@safari-7621-branch> Reviewed commits have been landed. Closing PR #2770 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.