Crash under WebPageProxy::navigationGestureDidEnd() https://bugs.webkit.org/show_bug.cgi?id=289255 rdar://144866140

Reviewed by Charlie Wolfe.

Make sure we null check the pageClient before dereferencing it.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::navigationGestureDidBegin):
(WebKit::WebPageProxy::navigationGestureWillEnd):
(WebKit::WebPageProxy::navigationGestureDidEnd):
(WebKit::WebPageProxy::willRecordNavigationSnapshot):

Canonical link: https://commits.webkit.org/291731@main